# nRF52DK-mrubyc-zephyr

./: .gitmodules  CMakeLists.txt  LICENSE  README.rst  prj.conf
src/: hal.h  main.c  sample1.c  sample1.rb  sample2.c  sample2.rb
src/lib/mrubyc/: hal.c  hal.h
